resolved small spacing issue

--- a/blog2/app/assets/stylesheets/bootstrap.css
+++ b/blog2/app/assets/stylesheets/bootstrap.css
@@ -1082,7 +1082,7 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Georgia", Helvetica, Arial, sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -3978,6 +3978,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  font-size: 13.8px;
 }
 .nav > li {
   position: relative;
